messchart/templates/argo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              serviceName: argocd-server
              servicePort: http
      host: argocd.example.com
  tls:
    secretName: argocd-secret # do not change, this is provided by Argo CD
